# ccuse

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yml
scripts/: aur-publish-bin.sh  aur-publish.sh
src/: lib.rs  main.rs
src/claude/: launcher.rs  mod.rs
src/cli/: args.rs  completions.rs  mod.rs
src/cli/commands/: add_cmd.rs  list_cmd.rs  mod.rs  remove_cmd.rs  rename_cmd.rs  update_cmd.rs  usage_cmd.rs  use_cmd.rs
src/config/: mod.rs  profile.rs  storage.rs
src/db/: ccswitch.rs  mod.rs
src/error/: mod.rs
