[package]
name = "ccuse"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
description = "A CLI tool to manage Claude Code profiles"
license = "MIT"
repository = "https://github.com/wjsoj/ccuse"
keywords = ["claude", "ai", "cli", "profile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "2.1"
directories = "5.0"
inquire = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
which = "5.0"
thiserror = "1.0"
dirs = "6.0.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
